--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
     "angular-resource": "1.2.6",
     "angular-cookies": "1.2.6",
     "angular-sanitize": "1.2.6",
-    "angular-route": "1.2.6"
+    "angular-route": "1.2.6",
+    "cloudinary_js": "git@github.com:cloudinary/cloudinary_js.git#~1.0.12"
   },
   "devDependencies": {
     "angular-mocks": "1.2.6",
